--- a/app.yaml
+++ b/app.yaml
@@ -1,8 +1,15 @@
 application: face3po
 version: 1
-runtime: python
+runtime: python27
 api_version: 1
+threadsafe: yes
 
 handlers:
 - url: /.*
-  script: example.py
+  script: example.app
+
+libraries:
+- name: jinja2
+  version: latest
+- name: webapp2
+  version: "2.5.2"
