--- a/app.yaml
+++ b/app.yaml
@@ -6,10 +6,10 @@ threadsafe: yes
 
 handlers:
 - url: /.*
-  script: example.app
+  script: main.app
 
 libraries:
 - name: jinja2
   version: latest
 - name: webapp2
-  version: "2.5.2"
+  version: latest
